--- a/src/style.css
+++ b/src/style.css
@@ -84,3 +84,100 @@ a {
     color: #fff;
     cursor: pointer;
 }
+.btn-primary {
+    background-color: #1977c0;
+}
+.btn-secondary {
+    background-color: red;
+}
+.cart-container {
+    background-color: #fff;
+    box-shadow: 0 0 010px rgba(0,0,0,0.1);
+    display: grid;
+    grid: 20px;
+    grid-template-columns: 2fr 1fr;
+    border-radius: 10px;
+    padding: 30px;
+    place-items: center;
+}
+.cart-products {
+    display: flex; 
+    align-items: center;
+    flex-direction: column;
+    width: 95%;
+    padding: 20px;
+    border-right: 1px solid #ccc;
+}
+.cart-product {
+    padding: 10px;
+    width: 95%;
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+    border-top: 1px solid #ccc;
+    place-content: center;
+}
+.cart-product img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+.cart-product span {
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+.cart-title-img {
+    display: flex;  
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+}
+.cart-title-img * {
+    padding: 0 10px;
+}
+.delete {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    font-weight: 400;
+    cursor: pointer;
+}
+.total-price {
+    border-top: 1px solid #ccc;
+}
+.payment-card {
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    padding: 0;
+    margin: 10px;
+    cursor: pointer;
+    text-align: center;
+}
+.payment-cards :hover,
+.payment-card.selected{
+    background-color: #92d0ff;
+}
+.form-control {
+    width: 82%;
+    margin: 0 12px;
+    padding: 20px;
+    border-radius: 15px;
+    font-size: 20px;
+    border: 1px solid #ccc;
+}
+.btn-proceed {
+    width: 94%;
+    margin: 10px 12px;
+    padding: 20px;
+    background-color: rgb(24,119,201);
+    color: #fff;
+    border: 0;
+    border-radius: 15px;
+    font-size: 20px;
+    cursor: pointer;
+}
+.title-1 {
+    text-align: center;
+}
