--- a/src/style.css
+++ b/src/style.css
@@ -181,3 +181,27 @@ a {
 .title-1 {
     text-align: center;
 }
+@media only screen and (max-width: 768px) {
+    .menu {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 50px;
+    }
+    .grid{
+       display: flex;
+       flex-direction: column;
+       margin: 50px;
+    }
+    .card{
+        display: inline-block;
+    }
+    .cart-container {
+        display: flex;
+        flex-direction: column;
+        margin: 20px;
+    }
+    .cart-products {
+        margin-top: 50px;
+    }
+  }
